deployment/coffee-shop.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: coffee-shop
spec:
  selector:
    matchLabels:
      app: coffee-shop
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-shop
    spec:
      containers:
        - name: coffee-shop
          image: docker.sebastian-daschner.com/coffee-shop:tmp
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /q/health
              port: 8080
      imagePullSecrets:
        - name: regsecret
      restartPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: coffee-shop
spec:
  selector:
    app: coffee-shop
  ports:
    - port: 8080
      name: http
  type: LoadBalancer
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: coffee-shop
spec:
  defaultBackend:
    service:
      name: coffee-shop
      port:
        number: 8080
---
